[refactor] Customer restore api.
