# kpi/storage/api-docs/api-docs.json
@@ -948,9 +948,42 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
                                         "message": {
                                             "type": "string",
-                                            "example": "Products assigned"
+                                            "example": "Assigned products retrieved successfully"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "code": {
+                                                        "type": "string",
+                                                        "example": "CUS-0001"
+                                                    },
+                                                    "name": {
+                                                        "type": "string",
+                                                        "example": "Prof. Evie Keebler V"
+                                                    },
+                                                    "email": {
+                                                        "type": "string",
+                                                        "example": "marguerite.hegmann@example.com"
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2025-06-04 17:24:31"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
                                         }
                                     },
                                     "type": "object"
